<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityApartmentCostCalculation"
    android:background="@color/white">
    <ImageButton
        android:onClick="Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:background="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Main"
        android:textColor="@color/blue"
        android:layout_marginLeft="30dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/Calculate_s"
        android:textColor="@color/pink"
        android:textSize="36dp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="41dp"
        android:background="@color/lightblue"
        android:orientation="vertical">

        <Spinner
            android:layout_marginTop="15dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="center"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:id="@+id/Spinner"
            android:background="@drawable/spinner_style" />

        <EditText
            android:id="@+id/Met_count"
            android:inputType="number"
            android:textSize="12sp"
            android:layout_marginTop="14dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:hint="@string/Write_Count_m"
            android:background="@drawable/background_color"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />
        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:text="@string/Count"
            android:textSize="24sp"
            android:background="@drawable/button_come"
            android:layout_gravity="center"
            android:layout_marginTop="33dp"
            android:onClick="Count"/>
        <TextView
            android:textSize="14sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/background_color"
            android:textColor="@color/black"
            android:text="@string/Result"
            />
    </LinearLayout>

</RelativeLayout>