<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCount"
    android:background="@color/white">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/Count_Result"
        android:textColor="@color/pink"
        android:textSize="36sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="41dp"
        android:background="@color/lightblue"
        android:orientation="vertical">

        <TextView
            android:id="@+id/met"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_marginTop="110dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:padding="9dp"
            android:text="@string/m_count"
            android:background="@drawable/background_color"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            />
        <TextView
            android:id="@+id/Result"
            android:textSize="14sp"
            android:layout_marginTop="130dp"
            android:layout_gravity="center"
            android:layout_width="161dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@drawable/background_color"
            android:textColor="@color/black"
            android:text="@string/Result"
            />
        <Button
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:text="@string/Registr"
            android:textSize="24sp"
            android:background="@drawable/button_come"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:onClick="LogIn"/>
    </LinearLayout>
</RelativeLayout>